--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "fp-ts": "^2.13.1",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
+    "react-redux": "^8.1.3",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-loop": "^6.2.0",
